--- a/playbook.yml
+++ b/playbook.yml
@@ -6,4 +6,17 @@
         state: latest
         update_cache: yes
       become: yes
-
+    - name: Instalando dependencias com PIP(Django e Django Rest)
+      pip:
+        virtualenv:  ~/tcc/venv
+        name:
+          - django
+          - djangorestframework
+    - name: Iniciando o projeto
+      shell: '. ~/tcc/venv/bin/activate; django-admin startproject setup ~/tcc/'
+    - name: Liberando hosts em ALLOWED HOSTS no settings
+      lineinfile:
+        path: ~/tcc/setup/settings.py
+        regexp: 'ALLOWED_HOSTS'
+        line: 'ALLOWED_HOSTS = ["*"]'
+        backrefs: yes
